# hunky

./: .gitignore  BUGFIXES.md  CONTRIBUTING.md  COVERAGE_PLAN.md  Cargo.toml  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SEEN_TRACKING.md  TEST_SIMULATION.md  demo.sh  flake.nix  simulate_changes.sh  simulation.sh  wrangler.toml
.cargo/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: rlkka704drjawyqgqqrif6xrkpkk3fra-source  v2yr9zhk9wal9nz3gh9gkkpq5mk9bzfm-source
.github/workflows/: ci.yml  deploy-landing.yml  release.yml
benches/: git_operations.rs
demo/: Cargo.toml
demo/src/: backend.rs  lib.rs
demo/web/: index.html  main.js
landing/: _worker.js  index.html
site/: .gitignore  docusaurus.config.js  package-lock.json
site/docs/: architecture.md  getting-started.md  intro.md  key-bindings.md
site/scripts/: process-benchmarks.mjs
site/src/css/: custom.css
site/src/pages/: benchmarks.js  coverage.js  demo.js  index.js
site/static/coverage-report/: index.html
src/: app.rs  diff.rs  git.rs  lib.rs  logger.rs  main.rs  syntax.rs  ui.rs  watcher.rs
tests/: app.rs  diff.rs  git.rs  logger.rs  main.rs  syntax.rs  ui.rs  watcher.rs
