[package]
name = "hunky"
version = "0.1.0"
edition = "2021"
autotests = false

[features]
default = ["native"]
native = [
    "dep:crossterm",
    "dep:git2",
    "dep:notify",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:syntect",
    "dep:clap",
    "dep:similar",
]

[dependencies]
# TUI framework (always needed)
ratatui = "0.29"

# Error handling (always needed)
anyhow = "1.0"
thiserror = "2.0"

# --- native-only deps (gated behind the "native" feature) ---
crossterm = { version = "0.28", optional = true }
git2 = { version = "0.19", optional = true }
notify = { version = "6.1", optional = true }
tokio = { version = "1.42", features = ["full"], optional = true }
tokio-stream = { version = "0.1", optional = true }
syntect = { version = "5.2", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
similar = { version = "2.6", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "git_operations"
harness = false
